# secret-generate-fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: config.py
src/: middleware.py  router.py  schemas.py
src/db/: auto_delete.py  init.sql  secrets.py
tests/: test_router.py
